a few minor changes